Standardize and fix z-indexes to 10,20,30,40,50

--- a/frontend/src/components/experiment_dashboard/cohort_summary.scss
+++ b/frontend/src/components/experiment_dashboard/cohort_summary.scss
@@ -20,7 +20,6 @@
   justify-content: space-between;
   padding: common.$spacing-medium common.$spacing-large;
   position: relative;
-  z-index: 2;
 
   &:focus,
   &:hover {
