--- a/frontend/src/pair-components/menu.scss
+++ b/frontend/src/pair-components/menu.scss
@@ -19,7 +19,7 @@
   height: 0;
   overflow: hidden;
   width: 0;
-  z-index: 1;
+  z-index: 30;
 
   &.show-menu {
     overflow: visible;
